2010-01-28  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Minor documentation change.

	* README (DOCUMENTATION): Added comments to the example code.

	* test/test_tree.rb: Documentation clean up.

	* test/test_binarytree.rb: Documentation clean up.

	* lib/tree.rb (Tree): Cleaned up documentation.  Also some minor
	code refactoring done.

	* lib/tree/binarytree.rb (Tree): Cleaned up documentation.  Minor
	readability improvement in the isLeftChild? and isRightChild? methods.

2010-01-05  Anupam Sengupta  <anupamsg@gmail.com>

	* README: Updated the requirements section.

	* Rakefile: Removed the hard run-time dependency on
	'structured_warnings' gem.  The library will still be used if
	available on the user's system.

	* test/test_tree.rb: Changed the tests to sync with the
	soft-dependency on 'structured_warnings'.

	* lib/tree.rb (Tree::TreeNode#depth): Removed the hard
	dependency on 'structured_warnings' RubyGem.  Changed to a soft
	dependency that degrades well to a standard warning mechanism if
	the Gem is not available.

2010-01-03  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree.rb (Tree::TreeNode#nodeDepth): Added the nodeDepth and
	nodeHeight methods.  Deprecated the depth method.  This is the
	bug-fix for bug # 22535.

	* Rakefile: Added run-time dependency on the 'structured_warnings' gem.

	* test/test_tree.rb: Added new test cases for the new nodeDepth
	and nodeHeight methods.

2010-01-01  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Have migrated 100% to usage of Hoe for the rake
	tasks. Have removed all legacy GemSpec and custom task definitions.

	* .cvsignore: Added the coverage.info file to the excluded list.

	* TODO: More TODO items.  Changed the file mode to use org-mode.

	* History.txt: Added the change log summary.

	* README: Updated the content to match the Hoe sections.  Minor
	formatting performed.  Changed the line endings to Unix.

	* COPYING: Minor formatting changes.
